Assignment1/grammar/ParLambdaNat.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParLambdaNat.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pExp1 -> Exp1                               (1)
	%start_pExp2 -> Exp2                               (2)
	%start_pExp3 -> Exp3                               (3)
	%start_pExp4 -> Exp4                               (4)
	%start_pExp6 -> Exp6                               (5)
	%start_pExp7 -> Exp7                               (6)
	%start_pExp8 -> Exp8                               (7)
	%start_pExp9 -> Exp9                               (8)
	%start_pExp10 -> Exp10                             (9)
	%start_pExp11 -> Exp11                             (10)
	%start_pExp5 -> Exp5                               (11)
	%start_pExp -> Exp                                 (12)
	Id -> L_Id                                         (13)
	Program -> Exp                                     (14)
	Exp1 -> '\\' Id '.' Exp                            (15)
	Exp1 -> Exp2                                       (16)
	Exp2 -> 'if' Exp '=' Exp 'then' Exp 'else' Exp     (17)
	Exp2 -> Exp3                                       (18)
	Exp3 -> 'let' Id '=' Exp 'in' Exp                  (19)
	Exp3 -> Exp4                                       (20)
	Exp4 -> 'let' 'rec' Id '=' Exp 'in' Exp            (21)
	Exp4 -> Exp5                                       (22)
	Exp6 -> 'hd' Exp                                   (23)
	Exp6 -> 'tl' Exp                                   (24)
	Exp6 -> Exp7                                       (25)
	Exp7 -> 'minus_one' Exp                            (26)
	Exp7 -> Exp8                                       (27)
	Exp8 -> Exp8 Exp9                                  (28)
	Exp8 -> Exp9                                       (29)
	Exp9 -> '#'                                        (30)
	Exp9 -> Exp10 ':' Exp9                             (31)
	Exp9 -> Exp10                                      (32)
	Exp10 -> '0'                                       (33)
	Exp10 -> 'S' Exp10                                 (34)
	Exp10 -> Exp11                                     (35)
	Exp11 -> Id                                        (36)
	Exp11 -> '(' Exp ')'                               (37)
	Exp5 -> Exp6                                       (38)
	Exp -> Exp1                                        (39)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#'            { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'.'            { PT _ (TS _ 4) }
	'0'            { PT _ (TS _ 5) }
	':'            { PT _ (TS _ 6) }
	'='            { PT _ (TS _ 7) }
	'S'            { PT _ (TS _ 8) }
	'\\'           { PT _ (TS _ 9) }
	'else'         { PT _ (TS _ 10) }
	'hd'           { PT _ (TS _ 11) }
	'if'           { PT _ (TS _ 12) }
	'in'           { PT _ (TS _ 13) }
	'let'          { PT _ (TS _ 14) }
	'minus_one'    { PT _ (TS _ 15) }
	'rec'          { PT _ (TS _ 16) }
	'then'         { PT _ (TS _ 17) }
	'tl'           { PT _ (TS _ 18) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pExp1    rule  1
	%start_pExp2    rule  2
	%start_pExp3    rule  3
	%start_pExp4    rule  4
	%start_pExp6    rule  5
	%start_pExp7    rule  6
	%start_pExp8    rule  7
	%start_pExp9    rule  8
	%start_pExp10   rule  9
	%start_pExp11   rule  10
	%start_pExp5    rule  11
	%start_pExp     rule  12
	Id              rule  13
	Program         rule  14
	Exp1            rules 15, 16
	Exp2            rules 17, 18
	Exp3            rules 19, 20
	Exp4            rules 21, 22
	Exp6            rules 23, 24, 25
	Exp7            rules 26, 27
	Exp8            rules 28, 29
	Exp9            rules 30, 31, 32
	Exp10           rules 33, 34, 35
	Exp11           rules 36, 37
	Exp5            rule  38
	Exp             rule  39

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Program        goto state 50
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 51

State 1


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 49
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26

State 2


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp2           goto state 48
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26

State 3


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'hd'           shift, and enter state 33
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp3           goto state 47
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26

State 4


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'hd'           shift, and enter state 33
	'let'          shift, and enter state 46
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp4           goto state 45
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26

State 5


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'hd'           shift, and enter state 33
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp6           goto state 44
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25

State 6


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'minus_one'    shift, and enter state 36
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp7           goto state 43
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25

State 7


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp8           goto state 42
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25

State 8


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp9           goto state 41
	Exp10          goto state 24
	Exp11          goto state 25

State 9


	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp10          goto state 40
	Exp11          goto state 25

State 10


	'('            shift, and enter state 29
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp11          goto state 39

State 11


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'hd'           shift, and enter state 33
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 38

State 12


	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 27

State 13


	L_Id           shift, and enter state 14


State 14

	Id -> L_Id .                                        (rule 13)

	'#'            reduce using rule 13
	'('            reduce using rule 13
	')'            reduce using rule 13
	'.'            reduce using rule 13
	'0'            reduce using rule 13
	':'            reduce using rule 13
	'='            reduce using rule 13
	'S'            reduce using rule 13
	'else'         reduce using rule 13
	'in'           reduce using rule 13
	'then'         reduce using rule 13
	L_Id           reduce using rule 13
	%eof           reduce using rule 13


State 15

	Exp11 -> Id .                                       (rule 36)

	'#'            reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'0'            reduce using rule 36
	':'            reduce using rule 36
	'='            reduce using rule 36
	'S'            reduce using rule 36
	'else'         reduce using rule 36
	'in'           reduce using rule 36
	'then'         reduce using rule 36
	L_Id           reduce using rule 36
	%eof           reduce using rule 36


State 16

	Exp -> Exp1 .                                       (rule 39)

	')'            reduce using rule 39
	'='            reduce using rule 39
	'else'         reduce using rule 39
	'in'           reduce using rule 39
	'then'         reduce using rule 39
	%eof           reduce using rule 39


State 17

	Exp1 -> Exp2 .                                      (rule 16)

	')'            reduce using rule 16
	'='            reduce using rule 16
	'else'         reduce using rule 16
	'in'           reduce using rule 16
	'then'         reduce using rule 16
	%eof           reduce using rule 16


State 18

	Exp2 -> Exp3 .                                      (rule 18)

	')'            reduce using rule 18
	'='            reduce using rule 18
	'else'         reduce using rule 18
	'in'           reduce using rule 18
	'then'         reduce using rule 18
	%eof           reduce using rule 18


State 19

	Exp3 -> Exp4 .                                      (rule 20)

	')'            reduce using rule 20
	'='            reduce using rule 20
	'else'         reduce using rule 20
	'in'           reduce using rule 20
	'then'         reduce using rule 20
	%eof           reduce using rule 20


State 20

	Exp5 -> Exp6 .                                      (rule 38)

	')'            reduce using rule 38
	'='            reduce using rule 38
	'else'         reduce using rule 38
	'in'           reduce using rule 38
	'then'         reduce using rule 38
	%eof           reduce using rule 38


State 21

	Exp6 -> Exp7 .                                      (rule 25)

	')'            reduce using rule 25
	'='            reduce using rule 25
	'else'         reduce using rule 25
	'in'           reduce using rule 25
	'then'         reduce using rule 25
	%eof           reduce using rule 25


State 22

	Exp7 -> Exp8 .                                      (rule 27)
	Exp8 -> Exp8 . Exp9                                 (rule 28)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	')'            reduce using rule 27
	'0'            shift, and enter state 30
	'='            reduce using rule 27
	'S'            shift, and enter state 31
	'else'         reduce using rule 27
	'in'           reduce using rule 27
	'then'         reduce using rule 27
	L_Id           shift, and enter state 14
	%eof           reduce using rule 27

	Id             goto state 15
	Exp9           goto state 53
	Exp10          goto state 24
	Exp11          goto state 25

State 23

	Exp8 -> Exp9 .                                      (rule 29)

	'#'            reduce using rule 29
	'('            reduce using rule 29
	')'            reduce using rule 29
	'0'            reduce using rule 29
	'='            reduce using rule 29
	'S'            reduce using rule 29
	'else'         reduce using rule 29
	'in'           reduce using rule 29
	'then'         reduce using rule 29
	L_Id           reduce using rule 29
	%eof           reduce using rule 29


State 24

	Exp9 -> Exp10 . ':' Exp9                            (rule 31)
	Exp9 -> Exp10 .                                     (rule 32)

	'#'            reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'0'            reduce using rule 32
	':'            shift, and enter state 62
	'='            reduce using rule 32
	'S'            reduce using rule 32
	'else'         reduce using rule 32
	'in'           reduce using rule 32
	'then'         reduce using rule 32
	L_Id           reduce using rule 32
	%eof           reduce using rule 32


State 25

	Exp10 -> Exp11 .                                    (rule 35)

	'#'            reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'0'            reduce using rule 35
	':'            reduce using rule 35
	'='            reduce using rule 35
	'S'            reduce using rule 35
	'else'         reduce using rule 35
	'in'           reduce using rule 35
	'then'         reduce using rule 35
	L_Id           reduce using rule 35
	%eof           reduce using rule 35


State 26

	Exp4 -> Exp5 .                                      (rule 22)

	')'            reduce using rule 22
	'='            reduce using rule 22
	'else'         reduce using rule 22
	'in'           reduce using rule 22
	'then'         reduce using rule 22
	%eof           reduce using rule 22


State 27

	%start_pExp -> Exp .                                (rule 12)

	%eof           accept


State 28

	Exp9 -> '#' .                                       (rule 30)

	'#'            reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'0'            reduce using rule 30
	'='            reduce using rule 30
	'S'            reduce using rule 30
	'else'         reduce using rule 30
	'in'           reduce using rule 30
	'then'         reduce using rule 30
	L_Id           reduce using rule 30
	%eof           reduce using rule 30


State 29

	Exp11 -> '(' . Exp ')'                              (rule 37)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 61

State 30

	Exp10 -> '0' .                                      (rule 33)

	'#'            reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'0'            reduce using rule 33
	':'            reduce using rule 33
	'='            reduce using rule 33
	'S'            reduce using rule 33
	'else'         reduce using rule 33
	'in'           reduce using rule 33
	'then'         reduce using rule 33
	L_Id           reduce using rule 33
	%eof           reduce using rule 33


State 31

	Exp10 -> 'S' . Exp10                                (rule 34)

	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp10          goto state 60
	Exp11          goto state 25

State 32

	Exp1 -> '\\' . Id '.' Exp                           (rule 15)

	L_Id           shift, and enter state 14

	Id             goto state 59

State 33

	Exp6 -> 'hd' . Exp                                  (rule 23)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 58

State 34

	Exp2 -> 'if' . Exp '=' Exp 'then' Exp 'else' Exp    (rule 17)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 57

State 35

	Exp3 -> 'let' . Id '=' Exp 'in' Exp                 (rule 19)
	Exp4 -> 'let' . 'rec' Id '=' Exp 'in' Exp           (rule 21)

	'rec'          shift, and enter state 52
	L_Id           shift, and enter state 14

	Id             goto state 56

State 36

	Exp7 -> 'minus_one' . Exp                           (rule 26)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 55

State 37

	Exp6 -> 'tl' . Exp                                  (rule 24)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 54

State 38

	%start_pExp5 -> Exp5 .                              (rule 11)

	%eof           accept


State 39

	%start_pExp11 -> Exp11 .                            (rule 10)

	%eof           accept


State 40

	%start_pExp10 -> Exp10 .                            (rule 9)

	%eof           accept


State 41

	%start_pExp9 -> Exp9 .                              (rule 8)

	%eof           accept


State 42

	%start_pExp8 -> Exp8 .                              (rule 7)
	Exp8 -> Exp8 . Exp9                                 (rule 28)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	L_Id           shift, and enter state 14
	%eof           accept

	Id             goto state 15
	Exp9           goto state 53
	Exp10          goto state 24
	Exp11          goto state 25

State 43

	%start_pExp7 -> Exp7 .                              (rule 6)

	%eof           accept


State 44

	%start_pExp6 -> Exp6 .                              (rule 5)

	%eof           accept


State 45

	%start_pExp4 -> Exp4 .                              (rule 4)

	%eof           accept


State 46

	Exp4 -> 'let' . 'rec' Id '=' Exp 'in' Exp           (rule 21)

	'rec'          shift, and enter state 52


State 47

	%start_pExp3 -> Exp3 .                              (rule 3)

	%eof           accept


State 48

	%start_pExp2 -> Exp2 .                              (rule 2)

	%eof           accept


State 49

	%start_pExp1 -> Exp1 .                              (rule 1)

	%eof           accept


State 50

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 51

	Program -> Exp .                                    (rule 14)

	%eof           reduce using rule 14


State 52

	Exp4 -> 'let' 'rec' . Id '=' Exp 'in' Exp           (rule 21)

	L_Id           shift, and enter state 14

	Id             goto state 68

State 53

	Exp8 -> Exp8 Exp9 .                                 (rule 28)

	'#'            reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'0'            reduce using rule 28
	'='            reduce using rule 28
	'S'            reduce using rule 28
	'else'         reduce using rule 28
	'in'           reduce using rule 28
	'then'         reduce using rule 28
	L_Id           reduce using rule 28
	%eof           reduce using rule 28


State 54

	Exp6 -> 'tl' Exp .                                  (rule 24)

	')'            reduce using rule 24
	'='            reduce using rule 24
	'else'         reduce using rule 24
	'in'           reduce using rule 24
	'then'         reduce using rule 24
	%eof           reduce using rule 24


State 55

	Exp7 -> 'minus_one' Exp .                           (rule 26)

	')'            reduce using rule 26
	'='            reduce using rule 26
	'else'         reduce using rule 26
	'in'           reduce using rule 26
	'then'         reduce using rule 26
	%eof           reduce using rule 26


State 56

	Exp3 -> 'let' Id . '=' Exp 'in' Exp                 (rule 19)

	'='            shift, and enter state 67


State 57

	Exp2 -> 'if' Exp . '=' Exp 'then' Exp 'else' Exp    (rule 17)

	'='            shift, and enter state 66


State 58

	Exp6 -> 'hd' Exp .                                  (rule 23)

	')'            reduce using rule 23
	'='            reduce using rule 23
	'else'         reduce using rule 23
	'in'           reduce using rule 23
	'then'         reduce using rule 23
	%eof           reduce using rule 23


State 59

	Exp1 -> '\\' Id . '.' Exp                           (rule 15)

	'.'            shift, and enter state 65


State 60

	Exp10 -> 'S' Exp10 .                                (rule 34)

	'#'            reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'0'            reduce using rule 34
	':'            reduce using rule 34
	'='            reduce using rule 34
	'S'            reduce using rule 34
	'else'         reduce using rule 34
	'in'           reduce using rule 34
	'then'         reduce using rule 34
	L_Id           reduce using rule 34
	%eof           reduce using rule 34


State 61

	Exp11 -> '(' Exp . ')'                              (rule 37)

	')'            shift, and enter state 64


State 62

	Exp9 -> Exp10 ':' . Exp9                            (rule 31)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp9           goto state 63
	Exp10          goto state 24
	Exp11          goto state 25

State 63

	Exp9 -> Exp10 ':' Exp9 .                            (rule 31)

	'#'            reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	'0'            reduce using rule 31
	'='            reduce using rule 31
	'S'            reduce using rule 31
	'else'         reduce using rule 31
	'in'           reduce using rule 31
	'then'         reduce using rule 31
	L_Id           reduce using rule 31
	%eof           reduce using rule 31


State 64

	Exp11 -> '(' Exp ')' .                              (rule 37)

	'#'            reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'0'            reduce using rule 37
	':'            reduce using rule 37
	'='            reduce using rule 37
	'S'            reduce using rule 37
	'else'         reduce using rule 37
	'in'           reduce using rule 37
	'then'         reduce using rule 37
	L_Id           reduce using rule 37
	%eof           reduce using rule 37


State 65

	Exp1 -> '\\' Id '.' . Exp                           (rule 15)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 72

State 66

	Exp2 -> 'if' Exp '=' . Exp 'then' Exp 'else' Exp    (rule 17)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 71

State 67

	Exp3 -> 'let' Id '=' . Exp 'in' Exp                 (rule 19)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
	Exp11          goto state 25
	Exp5           goto state 26
	Exp            goto state 70

State 68

	Exp4 -> 'let' 'rec' Id . '=' Exp 'in' Exp           (rule 21)

	'='            shift, and enter state 69


State 69

	Exp4 -> 'let' 'rec' Id '=' . Exp 'in' Exp           (rule 21)

	'#'            shift, and enter state 28
	'('            shift, and enter state 29
	'0'            shift, and enter state 30
	'S'            shift, and enter state 31
	'\\'           shift, and enter state 32
	'hd'           shift, and enter state 33
	'if'           shift, and enter state 34
	'let'          shift, and enter state 35
	'minus_one'    shift, and enter state 36
	'tl'           shift, and enter state 37
	L_Id           shift, and enter state 14

	Id             goto state 15
	Exp1           goto state 16
	Exp2           goto state 17
	Exp3           goto state 18
	Exp4           goto state 19
	Exp6           goto state 20
	Exp7           goto state 21
	Exp8           goto state 22
	Exp9           goto state 23
	Exp10          goto state 24
